# mwp

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  rust-toolchain.toml
.github/workflows/: actions.yaml  ci.yaml
mwp-cli/: Cargo.toml  README.md
mwp-cli/assets/: script.js  styles.scss
mwp-cli/src/: main.rs  render.rs
mwp-content/: Cargo.toml  README.md
mwp-content/src/: lib.rs
mwp-core/: Cargo.toml
mwp-scraper/: Cargo.toml  README.md
mwp-scraper/src/: lib.rs  main.rs  parser.rs
mwp-search/: Cargo.toml  README.md
mwp-search/src/: lib.rs
mwp-web/: Cargo.toml  build.rs
mwp-web/src/: main.rs  render.rs  search.rs
mwp-web/src/static/: styles.scss
mwp-web/static/: script.js  styles.css  styles.scss
src/: extract.rs  main.rs  parser.rs  scrape.rs
xtask/: Cargo.toml
xtask/src/: main.rs
