[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matouš Dzivjak <matousdzivjak@gmail.com>"]
categories = ["wiki", "knowledge-bage"]
repository = "https://github.com/matoous/mwp"
homepage = "https://github.com/matoous/mwp"

[workspace]
resolver = "2"
members = [
  "mwp-web",
  "mwp-scraper",
  "mwp-content",
  "mwp-search",
  "xtask",
]

default-members = [
  "mwp-web"
]

[profile.dev]
opt-level = 0

[profile.release]
lto = "fat"
opt-level = 3

[workspace.dependencies]
tantivy = { version = "0.22.0", features = ["mmap"] }
url = { version = "2.5.4", features = ["serde"] }
time = "0.3.37"
rusqlite = { version = "0.31.0", features = ["time", "url", "bundled"]}
log = "0.4.22"
tokio = { version = "1.42.0", features= ["full"]}
