[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matouš Dzivjak <matousdzivjak@gmail.com>"]
categories = ["wiki", "knowledge-bage"]
repository = "https://github.com/matoous/mwp"
homepage = "https://github.com/matoous/mwp"

[workspace]
resolver = "2"
members = [
  "mwp-scraper",
  "mwp-content",
  "mwp-search",
  "mwp-cli",
]

default-members = [
  "mwp-cli"
]

[profile.dev]
opt-level = 0

[profile.release]
lto = "fat"
opt-level = 3

[workspace.dependencies]
anyhow = "1.0.96"
camino = "1.1.9"
clap = { version = "4.5.37", features = ["derive", "env", "string", "wrap_help"] }
futures = "0.3.31"
grass = "0.13.4"
html-escape = "0.2.13"
indicatif = "0.17.11"
maud = "0.26.0"
pagefind = "1.4.0"
pulldown-cmark = "0.10.3"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
scraper = "0.19.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
sha1 = "0.10.6"
tantivy = { version = "0.22.0", features = ["mmap"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"
time = "0.3.37"
rusqlite = { version = "0.32.1", features = ["time", "url", "bundled"]}
log = "0.4.25"
tokio = { version = "1.43.0", features= ["full"]}
