[package]
name = "mwp"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "CLI for building, indexing, caching, and serving a static markdown wiki."
readme = "README.md"
publish = false

[[bin]]
name = "mwp"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
futures.workspace = true
grass.workspace = true
html-escape.workspace = true
indicatif.workspace = true
maud.workspace = true
mwp-content = { path = "../mwp-content" }
mwp-scraper = { path = "../mwp-scraper" }
pagefind.workspace = true
pulldown-cmark.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
walkdir.workspace = true
