[package]
name = "mwp-scraper"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
html-escape = "0.2.13"
lazy_static = "1.5.0"
lol_html = "1.2.1"
pulldown-cmark = "0.11.0"
regex = "1.10.5"
reqwest = "0.12.5"
serde = "1.0.204"
serde_json = "1.0.120"
sled = "0.34.7"
tantivy = { version = "0.22.0", features = ["mmap"] }
time = "0.3.36"
tokio = { version = "1.39.1", features= ["full"]}
url = { version = "2.5.2", features = ["serde"] }
walkdir = "2.5.0"
rusqlite = { version = "0.31.0", features = ["time", "url", "bundled"]}

mwp-content = { path="../mwp-content" }
mwp-search = { path="../mwp-search" }
