[package]
name = "mwp-scraper"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
html-escape = "0.2.13"
lol_html = "2.1.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = "0.12.12"

rusqlite = { workspace = true }
tantivy = { workspace = true }
url = { workspace = true }
time = { workspace = true }
log = { workspace = true }

mwp-content = { path="../mwp-content" }
mwp-search = { path="../mwp-search" }
