[package]
name = "mwp-web"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true

[[bin]]
name = "mwp"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
env_logger = "0.11.5"
maud = { version = "0.26.0", features = ["actix-web"] }
serde = "1.0.204"
serde_json = "1.0.132"
tantivy = "0.22.0"
rusqlite = { version = "0.31.0", features = ["time", "url", "bundled"]}
clap = { version = "4.5.11", features = ["derive"]}
static-files = "0.2.4"
actix-web-static-files = "4.0.1"

mwp-content = { path="../mwp-content" }
mwp-search = { path="../mwp-search" }

[build-dependencies]
grass = "0.13.3"
static-files = "0.2.4"
