[package]
name = "mwp-web"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true

[[bin]]
name = "mwp"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
static-files = "0.2.4"
actix-web-static-files = "4.0.1"

env_logger = "0.11.6"
maud = { version = "0.26.0", features = ["actix-web"] }
serde = "1.0.217"
serde_json = "1.0.138"
clap = { version = "4.5.27", features = ["derive"]}

rusqlite = { workspace = true }
tantivy = { workspace = true }

mwp-content = { path="../mwp-content" }
mwp-search = { path="../mwp-search" }

[build-dependencies]
grass = "0.13.4"
static-files = "0.2.4"
